{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "126694ec-9553-4e22-ac7c-5ce99de23e8f",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "76057369-a4b6-4947-a95b-c5e0e1e9334a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "cd0b601d-1779-41a1-bbb1-f4aee1fb58c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0f928fff-8730-40b3-809d-f831b06dc77b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ced637dd-4eff-4b7e-833c-5a6a0ba810c7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}